# dash-favicon-plugin

./: README-zh_CN.md  README.md  example.py  pyproject.toml
dash_favicon_plugin/: __init__.py
