[project]
name = "dash-favicon-plugin"
version = "0.1.1"
description = "Set favicon plugin for Dash applications using Dash Hooks."
readme = "README.md"
authors = [{ name = "luojiaaoo", email = "675925864@qq.com" }]
requires-python = ">=3.8"
dependencies = ["dash>=3.1.1", "feffery-utils-components"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dash_favicon_plugin"]

[project.urls]
repository = "https://github.com/luojiaaoo/dash-favicon-plugin"
